--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -1,12 +1,15 @@
-<html>
-    <head><meta charset=\"utf-8\"><title>{{fn}}</title></head>
-    <body>
-        <h1>{{basename(fn)}}</h1>
+{% extends "bootstrap/base.html" %}
+{% block title %}{{basename(fn)}}{% endblock %}
 
+{% block content %}
+        <h1>{{basename(fn)}}</h1>
         {% for pid, e in enumerate(archive.fnlist) %}
         <ul><a id="{{e}}" href="{{url_for('view', aid=aid, pid=pid)}}">{{e}}</a></ul>
         {% endfor %}
-        <p>
-        <a href="{{url_for('index', _anchor=aid)}} ">向上</a><p>
-    </body>
-</html>
+{% endblock %}
+
+{% block navbar %}
+<nav class="navbar fixed-bottom">
+        <a href="{{url_for('index', _anchor=aid)}} ">Up</a><p>
+</div>
+{% endblock %}
