--- a/new/templates/view.html
+++ b/new/templates/view.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{pid+1}} / {{len(ar.fnlist)}}]</title>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-<meta charset="utf-8">
-</head>
-<head>
+{% extends "bootstrap/base.html" %}
+
+{% block title %}{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{pid+1}} / {{len(ar.fnlist)}}]{% endblock %}
+
+{% block styles %}
+{{super()}}
 <style>
   * {
     padding: 0;
@@ -20,8 +18,10 @@
     margin: auto;
   }
 </style>
-</head>
-<body>
+{% endblock %}
+
+{% block navbar %}
+<div class="navbar top">
     <div align=center style=\"padding: 4px;\">{{pid+1}} / {{len(ar.fnlist)}}<br>
     {% if pid > 0 %}
         <a href="{{url_for('view', aid=aid, pid=pid-1)}}">Prev</a>
@@ -31,58 +31,13 @@
         <a href="{{url_for('view', aid=aid, pid=pid+1)}}">Next</a>
     {% endif %}
     </div>
+</div>
+{% endblock %}
 
+{% block content %}
     {% if pid+1 < len(ar.fnlist) %}
-    <img src="{{url_for('image', aid=aid, pid=pid)}}" class=\"center fit\" onclick=\"window.location.href = "{{url_for('view', aid=aid, pid=pid+1)}}";>
-
-    <script type="text/javascript" language="JavaScript">
-      function set_body_width() { // set body width = window width
-        $('body').width($(window).width());
-      }
-      $(document).ready(function() {
-        $(window).bind('resize', set_body_width);
-        set_body_width();
-      });
-function getDocHeight() {
-var D = document;
-return Math.max(
-    D.body.scrollHeight, D.documentElement.scrollHeight,
-    D.body.offsetHeight, D.documentElement.offsetHeight,
-    D.body.clientHeight, D.documentElement.clientHeight
-    );
-}
-$(function() {
-    $('html').keydown(function(e) {
-        if ($(window).scrollTop() + $(window).height() == getDocHeight() && (e.keyCode == 34 || e.keyCode == 32)) {
-            window.location.href = '{{url_for('view', aid=aid, pid=pid+1)}}';
-        }
-    });
-});
-    </script>
+    <img src="{{url_for('image', aid=aid, pid=pid)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
     {% else %}
-    <img src="{{url_for('image', aid=aid, pid=pid)}}" class=\"center fit\" onclick=\"window.location.href = "{{url_for('archive_', aid=aid, _anchor=aid)}}">
-    <script type="text/javascript" language="JavaScript">
-      function set_body_width() { // set body width = window width
-        $('body').width($(window).width());
-      }
-      $(document).ready(function() {
-        $(window).bind('resize', set_body_width);
-        set_body_width();
-      });
-function getDocHeight() {
-var D = document;
-return Math.max(
-    D.body.scrollHeight, D.documentElement.scrollHeight,
-    D.body.offsetHeight, D.documentElement.offsetHeight,
-    D.body.clientHeight, D.documentElement.clientHeight
-    );
-}
-$(function() {
-    $('html').keydown(function(e) {
-        if ($(window).scrollTop() + $(window).height() == getDocHeight() && (e.keyCode == 34 || e.keyCode == 32)) {
-            window.location.href = '{{url_for('archive_', aid=aid, _anchor=aid)}}';
-        }
-    });
-});
-    </script>
+    <img src="{{url_for('image', aid=aid, pid=pid)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
     {% endif %}
+{% endblock %}
