--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -1,4 +1,5 @@
-{% extends "bootstrap/base.html" %}
+{% extends "base.html" %}
+
 {% block title %}{{basename(fn)}}{% endblock %}
 
 {% block content %}
