--- a/new/templates/view.html
+++ b/new/templates/view.html
@@ -1,9 +1,9 @@
-{% extends "bootstrap/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{pid+1}} / {{len(ar.fnlist)}}]{% endblock %}
 
 {% block scripts %}
-{{super()}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" language="JavaScript">
 function set_body_width() { // set body width = window width
     $('body').width($(window).width());
@@ -28,24 +28,6 @@ $(function() {
     });
 });
     </script>
-{% endblock %}
-
-{% block styles %}
-{{super()}}
-<style>
-  * {
-    padding: 0;
-    margin: 0;
-  }
-  .fit { /* set relative picture size */
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .center {
-    display: block;
-    margin: auto;
-  }
-</style>
 {% endblock %}
 
 {% block navbar %}
