added argparse, add sort by filename/size/time option, added nowebp webbrowser option
run it like this:

~/comic_webviewer/new/comic_webviewer.py -p 8492 -s name -c 15 -a 0.0.0.0 --webp-preset photo -d

Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/index.html
+++ b/new/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
     {% for e in archives %}
-    <ul><a id="{{e}}" href="{{url_for('archive_', aid=e)}}">{{basename(archives[e])}}</a></ul>
+    <ul><a id="{{e}}" href="{{url_for('archive_', aid=e, nowebp=nowebp)}}">{{basename(archives[e]['filename'])}}</a></ul>
     {% endfor %}
 {% endblock %}
