--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -5,12 +5,12 @@
 {% block content %}
         <h1>{{basename(fn)}}</h1>
         {% for pid, e in enumerate(archive.fnlist) %}
-        <ul><a id="{{e}}" href="{{url_for('view', aid=aid, pid=pid)}}">{{e}}</a></ul>
+        <ul><a id="{{e}}" href="{{url_for('view', aid=aid, pid=pid, nowebp=nowebp)}}">{{e}}</a></ul>
         {% endfor %}
 {% endblock %}
 
 {% block navbar %}
 <nav class="navbar fixed-bottom">
-        <a href="{{url_for('index', _anchor=aid)}} ">Up</a><p>
+        <a href="{{url_for('index', _anchor=aid, nowebp=nowebp)}} ">Up</a><p>
 </div>
 {% endblock %}
