--- a/new/templates/view.html
+++ b/new/templates/view.html
@@ -34,11 +34,11 @@ $(function() {
 <div class="navbar top">
     <div align=center style=\"padding: 4px;\">{{pid+1}} / {{len(ar.fnlist)}}<br>
     {% if pid > 0 %}
-        <a href="{{url_for('view', aid=aid, pid=pid-1)}}">Prev</a>
+        <a href="{{url_for('view', aid=aid, pid=pid-1, nowebp=nowebp)}}">Prev</a>
     {% endif %}
-    <a href="{{url_for('archive_', aid=aid, _anchor=aid)}}">Up</a>
+    <a href="{{url_for('archive_', aid=aid, _anchor=aid, nowebp=nowebp)}}">Up</a>
     {% if pid+1 < len(ar.fnlist) %}
-        <a href="{{url_for('view', aid=aid, pid=pid+1)}}">Next</a>
+        <a href="{{url_for('view', aid=aid, pid=pid+1, nowebp=nowebp)}}">Next</a>
     {% endif %}
     </div>
 </div>
@@ -46,8 +46,8 @@ $(function() {
 
 {% block content %}
     {% if pid+1 < len(ar.fnlist) %}
-    <img src="{{url_for('image', aid=aid, pid=pid)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
+    <img src="{{url_for('image', aid=aid, pid=pid, nowebp=nowebp)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
     {% else %}
-    <img src="{{url_for('image', aid=aid, pid=pid)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
+    <img src="{{url_for('image', aid=aid, pid=pid, nowebp=nowebp)}}" class="center fit" onclick="window.location.href = '{{next_location}}';">
     {% endif %}
 {% endblock %}
