improve archive up button too
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -11,6 +11,6 @@
 
 {% block navbar %}
 <nav class="navbar fixed-bottom">
-        <a href="{{url_for('index', _anchor=aid, nowebp=nowebp)}} ">Up</a><p>
+        <a id=up href="{{url_for('index', _anchor=aid, nowebp=nowebp)}} ">Up</a><p>
 </div>
 {% endblock %}
