use div align=center on archive up
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -11,6 +11,6 @@
 
 {% block navbar %}
 <nav class="navbar fixed-bottom">
-        <a id=up href="{{url_for('index', _anchor=aid, nowebp=nowebp)}} ">Up</a><p>
+    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('index', _anchor=aid, nowebp=nowebp)}} ">Up</a></div><p>
 </div>
 {% endblock %}
