prevent next/prev too fast before all images loaded
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/view.html
+++ b/new/templates/view.html
@@ -35,11 +35,11 @@ function jump_at_bottom(e) {
 }
 
 function update_top() {
-    atTop = $(window).scrollTop() == 0;
+    atTop = document.readyState == "complete" && $(window).scrollTop() == 0;
 }
 
 function update_bottom() {
-    atBottom = $(window).height() + Math.ceil($(window).scrollTop()) >= document.body.scrollHeight - 5;
+    atBottom = document.readyState == "complete" && $(window).height() + Math.ceil($(window).scrollTop()) >= document.body.scrollHeight - 5;
 }
 
 $(function() {
