--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -2,10 +2,22 @@
 
 {% block title %}{{basename(fn)}}{% endblock %}
 
+{% block scripts %}
+        <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
+        <script type="text/javascript" language="JavaScript">
+            $(document).ready(function() {
+                width = window.innerWidth;
+                $('a.imglink').each(function(o) {
+                    $(this).attr("href", $(this).attr("href") + '&width=' + width);
+                });
+            });
+        </script>
+{% endblock %}
+
 {% block content %}
         <h1>{{basename(fn)}}</h1>
         {% for pid, e in enumerate(archive.fnlist) %}
-        <ul><a id="{{e}}" href="{{url_for('view', aid=aid, pid=pid, nowebp=nowebp)}}">{{e}}</a></ul>
+        <ul><a class="imglink" id="{{e}}" href="{{url_for('view', aid=aid, pid=pid, nowebp=nowebp)}}">{{e}}</a></ul>
         {% endfor %}
 {% endblock %}
 
