use Math.max(width, height)
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -7,8 +7,9 @@
         <script type="text/javascript" language="JavaScript">
             $(document).ready(function() {
                 width = window.innerWidth;
+                height = window.innerHeight;
                 $('a.imglink').each(function(o) {
-                    $(this).attr("href", $(this).attr("href") + '&width=' + width);
+                    $(this).attr("href", $(this).attr("href") + '&width=' + Math.max(width, height));
                 });
             });
         </script>
