use jquery width/height()
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/new/templates/archive.html
+++ b/new/templates/archive.html
@@ -6,8 +6,9 @@
         <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
         <script type="text/javascript" language="JavaScript">
             $(document).ready(function() {
-                width = window.innerWidth;
-                height = window.innerHeight;
+                width = $(window).width();
+                height = $(window).height();
+                // console.log('width ' + width + ' height ' + height);
                 $('a.imglink').each(function(o) {
                     $(this).attr("href", $(this).attr("href") + '&width=' + Math.max(width, height));
                 });
