--- a/new/templates/view.html
+++ b/new/templates/view.html
@@ -1,3 +1,15 @@
+{% macro link_archive() -%}
+    {{url_for('archive_', aid=aid, _anchor=aid, nowebp=nowebp)}}
+{%- endmacro %}
+
+{% macro link_next() -%}
+    {{url_for('view', aid=aid, pid=pid+step, nowebp=nowebp, width=width)}}
+{%- endmacro %}
+
+{% macro link_prev() -%}
+    {{url_for('view', aid=aid, pid=max(pid-step, 0), nowebp=nowebp, width=width)}}
+{%- endmacro %}
+
 {% extends "base.html" %}
 
 {% block title %}{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{pid+1}} / {{len(ar.fnlist)}}]{% endblock %}
@@ -20,9 +32,9 @@ function jump_at_top(e) {
     if (atTop) {
         window.location.href =
         {% if pid == 0 %}
-            '{{url_for('archive_', aid=aid, _anchor=aid, nowebp=nowebp)}}'
+            '{{link_archive()}}'
         {% else %}
-            '{{url_for('view', aid=aid, pid=max(pid-step, 0), nowebp=nowebp, width=width)}}'
+            '{{link_prev()}}'
         {% endif %}
         .replace(/&amp;/g, "&");
     }
@@ -30,7 +42,7 @@ function jump_at_top(e) {
 
 function jump_at_bottom(e) {
     if (atBottom) {
-        window.location.href = "{{ url_for('view', aid=aid, pid=pid+step, nowebp=nowebp, width=width) if pid+step < len(ar.fnlist) else url_for('archive_', aid=aid, _anchor=aid, nowebp=nowebp, width=width)}}".replace(/&amp;/g, "&");
+        window.location.href = "{{ link_next() if pid+step < len(ar.fnlist) else link_archive() }}".replace(/&amp;/g, "&");
     }
 }
 
@@ -78,11 +90,11 @@ window.onscroll = update_bottom;
         {{pid+1}} / {{len(ar.fnlist)}}<br>
     {% endif %}
     {% if pid > 0 %}
-        <a id=prev href="{{url_for('view', aid=aid, pid=max(pid-step, 0), nowebp=nowebp, width=width)}}">Prev</a>
+        <a id=prev href="{{link_prev()}}">Prev</a>
     {% endif %}
-    <a id=up href="{{url_for('archive_', aid=aid, _anchor=aid, nowebp=nowebp, width=width)}}">Up</a>
+    <a id=up href="{{link_archive()}}">Up</a>
     {% if pid+step < len(ar.fnlist) %}
-        <a id=next href="{{url_for('view', aid=aid, pid=pid+step, nowebp=nowebp, width=width)}}">Next</a>
+        <a id=next href="{{link_next()}}">Next</a>
     {% endif %}
     </div>
 </div>
