archive 'up' button should point to subindex
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -25,6 +25,6 @@
 
 {% block navbar %}
 <nav class="navbar fixed-bottom">
-    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('index', aid=aid, _anchor=fhash, nowebp=nowebp)}} ">Up</a></div><p>
+    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('subindex', aid=aid, _anchor=fhash, nowebp=nowebp)}} ">Up</a></div><p>
 </div>
 {% endblock %}
