--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Comic Webviewer{% endblock %}
 
 {% block content %}
-    {% for e in archives %}
+    {% for e in repo %}
     <ul><a id="{{e}}" href="{{url_for('subindex', aid=loop.index0, nowebp=nowebp)}}">{{loop.index}}: {{e[0]}} </a></ul>
     {% endfor %}
 {% endblock %}
