--- a/templates/subindex.html
+++ b/templates/subindex.html
@@ -3,13 +3,13 @@
 {% block title %}Comic Webviewer{% endblock %}
 
 {% block content %}
-    {% for e in archives[2] %}
-    <ul><a id="{{e}}" href="{{url_for('archive_', aid=aid, fhash=e, nowebp=nowebp)}}">{{basename(archives[2][e]['filename'])}}</a></ul>
+    {% for k, v in archives[ARCHIVE].items() %}
+        <ul><a id="{{k}}" href="{{url_for('archive_', aid=aid, fhash=k, nowebp=nowebp)}}">{{v['filename'][v['filename'].find(sep)+1:]}}</a></ul>
     {% endfor %}
 {% endblock %}
 
 {% block navbar %}
 <nav class="navbar fixed-bottom">
-    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('index', aid=aid, _anchor=fhash, nowebp=nowebp)}} ">Up</a></div><p>
+    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('index', aid=aid, nowebp=nowebp)}} ">Up</a></div><p>
 </div>
 {% endblock %}
