added footer for subindex. clean up code
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar fixed-bottom">
-    <div align=center style=\"padding: 4px;\"><a id=up href="{{url_for('.subindex', aid=aid, _anchor=fhash, page=page, nowebp=nowebp)}} ">Up</a></div><p>
+<div align=center style=\"padding: 4px;\">
+    <a id=up href="{{url_for('.subindex', aid=aid, _anchor=fhash, page=page, nowebp=nowebp)}} ">Up</a>
 </div>
 {% endblock %}
