--- a/cwebviewer/templates/base.html
+++ b/cwebviewer/templates/base.html
@@ -11,8 +11,7 @@
   <body>
     <div id="navbar">{% block navbar %}{% endblock %}</div>
     <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-    </div>
+    <div id="footer">{% block footer %}{% endblock %}</div>
   </body>
 </html>
 
