--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -19,7 +19,7 @@
 {% block content %}
         <h1>{{basename(fn)}}</h1>
         {% for e in archive.fnlist %}
-        <ul><a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=fhash, pid=loop.index0, page=page, nowebp=nowebp)}}">{{e}}</a></ul>
+        <ul><a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=fhash, pid=loop.index0, page=page, nowebp=nowebp)}}">{{fix_up(e)}}</a></ul>
         {% endfor %}
 {% endblock %}
 
