removed nowebp option, trying simplify code
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/index.html
+++ b/cwebviewer/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
     {% for e in app.repo %}
-    <ul><a id="{{e}}" href="{{url_for('.subindex', aid=loop.index0, nowebp=nowebp)}}">{{loop.index}}: {{e[0]}} </a></ul>
+    <ul><a id="{{e}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e[0]}} </a></ul>
     {% endfor %}
 {% endblock %}
